# awsx

./: .cursorrules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.agents/workflows/: publish-release.md  testing-guidelines.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.kiro/steering/: awsx-scope.md
src/: aws.rs  config.rs  context.rs  interactive.rs  kube.rs  main.rs  matching.rs  shell.rs
tests/: e2e_test.rs
