[package]
name = "aws-context-switcher"
version = "0.1.0"
edition = "2021"
description = "AWS Context Switcher — switch AWS profile + kubectl context + region in one command"
license = "MIT"
repository = "https://github.com/abdul-zailani/awsx"
keywords = ["aws", "kubernetes", "cli", "devops", "context-switcher"]
categories = ["command-line-utilities"]

[lib]
name = "aws_context_switcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
colored = "3"
skim = "0.10"
which = "7"
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
